# LMIS-OED

./: .gitmodules  CMakeLists.txt  README.md  build.sh  build_nlopt.sh  uncrustify.cfg  uncrustify.sh
analysis/: common.py  common2.py  constants.py  ess.py  ess_hist_post.py  esspy3.py  fixedpython3.py  linear_convergence.py  mossbauer_convergence.py  mossbauer_convergence_post.py  mossbauer_ess.py  mossbauer_ess_hist_post.py  mossbauer_ess_post.py  mossbauer_sweep.py  mossbauer_sweep3d.py  mossbauer_sweep3d_post.py  plotting.py  scaling.py  scaling_joint.py
expdesign/: bias_ratio_post.py  common.py  expdesign.py  g4d_convergence.py  gauss2d_plot.py  gauss4d.py  gauss4d_convergence.py  gauss4d_convergence_post.py  mis_visualize.py  mossbauer-ess-post.py  mossbauer-ess.py  mossbauer-mcmc-pair.py  mossbauer-mcmc-post.py  mossbauer-mcmc.py  mossbauer-sweep-gamma.py  mossbauer-sweep-joint.py  mossbauer-sweep-post.py  mossbauer-sweep.py  mossbauer-sweep1d-baseline.py  mossbauer-sweep1d-post.py  mossbauer-sweep1d.py  mossbauer-sweep2d-post.py  mossbauer-sweep3d-post.py  mossbauer.py  mossbauer3d-sweep-post.py  mossbauer_1d_sweep.py  mossbauer_1d_sweep_post.py  mossbauer_3d_sweep.py  mossbauer_3d_sweep_post.py  mossbauer_convergence.py  mossbauer_convergence_post.py  mossbauer_exact.py  mossbauer_exact_post.py  mossbauser_convergence_post.py  mse_fraction.py  mse_fraction_fixed.py  mse_fraction_post.py  mse_ratio.py  mse_ratio_post.py  plotting.py  (+1 more)
runs/: budgets.py  common.py  convergence.py  convergence_evaluations.py  convergence_evaluations_postprocess.py  eigdetplot.py  (+17 more)
(+36 files in other folders)
